--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
@@ -68,7 +68,7 @@
 		position: relative;
 		margin: 10px;
 		border: 2px solid black;
-		background-color: v.$light-gray;
+		background-color: v.$light-gray-level-5;
 		padding: 0px 20px 20px 20px;
 		overflow-wrap: anywhere;
 	}
