--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewCommentsBoxIndividualComment.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewCommentsBoxIndividualComment.scss
@@ -64,7 +64,7 @@
 		float: right;
 		border: 1px solid black;
 		border-radius: v.$base-buttton-border-radius;
-		background-color: #e7e7e7;
+		background-color: white;
 		// Only top and bottom because of inconisistencies
 		// ...with button and div padding.
 		padding: 10px 0px 10px 0px;
@@ -76,7 +76,7 @@
 
 		&:hover,
 		&:active {
-			background-color: #dad9d9;
+			background-color: v.$light-gray-level-1;
 		}
 	}
 }
