--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
@@ -84,7 +84,7 @@
 		border: 1px solid gray;
 		border-radius: v.$form-input-border-radius;
 		box-sizing: border-box;
-		background-color: #e5e5e5;
+		background: v.$light-gray-level-5;
 		padding: v.$create-item-sidebar-padding;
 		width: 100%;
 		font-size: v.$item-form-text-input-font-size;
@@ -103,7 +103,7 @@
 		outline: none;
 		border: 1px solid gray;
 		border-radius: v.$form-input-border-radius;
-		background-color: v.$light-gray;
+		background-color: v.$light-gray-level-5;
 		padding: 4px v.$create-item-sidebar-padding 4px
 			v.$create-item-sidebar-padding;
 		height: 150px;
@@ -131,7 +131,7 @@
 		margin-bottom: v.$form-input-margin-bottom;
 		outline: none;
 		border: 1px solid gray;
-		background-color: v.$light-gray;
+		background-color: v.$light-gray-level-5;
 		// Width is 97% since date boxes extend past conatiner
 		width: 97%;
 		// one pixel smaller than associated label
@@ -142,7 +142,7 @@
 		margin-top: 2px;
 		margin-bottom: v.$form-input-margin-bottom;
 		border: 1px solid gray;
-		background-color: v.$light-gray;
+		background-color: v.$light-gray-level-5;
 		width: 100%;
 		// one pixel smaller than associated label
 		font-size: 13px;
@@ -169,13 +169,13 @@
 	// These classes are used by the custom hook that handles appearance
 	// ...of completion date based of the status of the project
 	.grayed-out-unclickable-label {
-		color: v.$medium-light-gray;
+		color: v.$gray-level-2;
 		pointer-events: none;
 	}
 
 	.grayed-out-unclickable-date {
 		background-color: white;
-		color: v.$medium-light-gray;
+		color: v.$gray-level-2;
 		pointer-events: none;
 	}
 }
