--- a/client/src/CSS/scss_partials/home/account/_editAccountModals.scss
+++ b/client/src/CSS/scss_partials/home/account/_editAccountModals.scss
@@ -58,10 +58,10 @@
 	}
 
 	.form__text-input {
-		margin-top: 5px;
-		margin-bottom: v.$form-input-margin-bottom;
+		margin-top: v.$edit-account-form-input-margin-top;
+		margin-bottom: v.$edit-account-create-item-form-input-margin-bottom;
 		outline: none;
-		border: 1px solid gray;
+		border: v.$form-input-text-base-border-width solid gray;
 		border-radius: v.$form-input-border-radius;
 		box-sizing: border-box;
 		background: v.$light-gray-level-5;
@@ -69,6 +69,12 @@
 		width: 100%;
 		font-size: 14px;
 		text-align: center;
+
+		&:focus {
+			border: v.$form-input-text-focus-border-width solid v.$focus-blue;
+			margin-top: v.$edit-account-form-input-margin-top - v.$form-input-text-focus-border-width-difference;
+			margin-bottom: v.$edit-account-create-item-form-input-margin-bottom - v.$form-input-text-focus-border-width-difference;
+		}
 	}
 
 	.form__text-input--password {
@@ -84,7 +90,7 @@
 
 	.form__submit {
 		margin-top: 15px;
-		margin-bottom: v.$form-input-margin-bottom;
+		margin-bottom: v.$edit-account-create-item-form-input-margin-bottom;
 		outline: none;
 		border: 0;
 		border-radius: v.$base-buttton-border-radius;
