--- a/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
@@ -2,6 +2,10 @@
 
 .account-sidebar-component {
 	.sidebar-container {
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+
 		// Must be the same as accountBlurredBackground.scss
 		z-index: 2;
 		position: fixed;
@@ -9,12 +13,12 @@
 		right: 0;
 		// Used by JS during resize to give margin to bottom
 		margin-bottom: 20px;
-		border: 5px solid black;
-		border-top: none;
+		border: 2px solid black;
 		border-right: none;
+		border-radius: v.$base-sidebar-border-radius 0 0 v.$base-sidebar-border-radius;
 		background: white;
 		height: 200px;
-		width: 350px;
+		width: v.$account-sidebar-width;
 		text-align: left;
 		font-family: Arial, Helvetica, sans-serif;
 		// Gives sidebar scrolling when content goes beyond height
